# mingw-woarm64-build

./: .gitattributes  .gitignore  README.md  build.sh  check.sh  compare-test-results.sh  execute-valist-tests.sh  hello_world.c  install-dependencies.sh  test  update.sh
.github/cmake/: aarch64-linux-gnu.cmake  aarch64-pc-cygwin.cmake  aarch64-pc-linux-gnu.cmake  aarch64-w64-mingw32.cmake  run.sh  x86_64-pc-cygwin.cmake  x86_64-w64-mingw32.cmake
.github/scripts/: build-aarch64-tests.sh  build-binutils.sh  build-ffmpeg.sh  build-gcc-libs.sh  build-gcc.sh  build-libgcc.sh  build-libjpeg-turbo.sh  build-mingw-crt.sh  build-mingw-headers.sh  build-mingw.sh  build-openblas.sh  build-openssl.sh  build-zlib.sh  build.sh  config-mingw.sh  config.ps1  config.sh  delete-build.sh  delete-code.sh  download-toolchain.sh  enable-ccache.sh  execute-aarch64-tests.ps1  execute-libjpeg-turbo-tests.ps1  execute-openssl-tests.ps1  extract-cache-key.sh  extract-cache-keys.sh  get-cache-keys.sh  get-directory-sha.sh  get-file-sha.sh  get-files-sha.sh  get-paths.sh  get-repository-sha.sh  get-sha.sh  get-wsl-paths.sh  git-utils.sh  install-cross-headers-libs.sh  install-dependencies.sh  install-libraries.sh  install-openssl-dependencies.sh  install-zstd.ps1  (+32 more)
.github/workflows/: advanced.yml  build-and-test-toolchain-msys2-native.yml  build-and-test-toolchain-msys2-one-job.yml  build-and-test-toolchain-msys2.yml  build-and-test-toolchain.yml  build-only.yml  build-toolchain.yml  git.yml  main.yml  msys.yml  patch-set.yml  (+9 more)
examples/: build-examples.sh  dll.c  dll.def  readme.md  run-examples.bat  test-dll.c  test-iostream.cpp  test-math.c  test-openblas.c  test-pdata.c  test-sjlj.c  test-varargs.c
issues/: .gitignore  pr39423-1.sh  strncmp.sh
return-zero/: .gitignore  build.sh
scripts/: find_symbol.py
tests/: .gitignore  BUILD.txt  CMakeLists.txt  bigdata-test.c  bigdata-test.cpp  bigstatic.c  build-tests.sh  chkstk-test.c  chkstk-test.cpp  dll-test.c  dll-test.cpp  dll.c  dll.def  exception-chain-test.cpp  exception-constructor-test.cpp  execute-abi-tests.sh  gtest_like_c.c  gtest_like_c.h  hello.c  hello.cpp  iostream-test.cpp  large-alignment-test.c  large-struct-test.c  main.c  math-test.c  math-test.cpp  nested-functions-test.c  nested-functions-test.cpp  omp-test.c  omp-test.cpp  omp_test.c  openblas-test.c  openblas-test.cpp  openblas_test.c  openblas_test.cpp  pdata-test.c  pdata-test.cpp  pdata_test.c  printf-double.c  seh-fregp.cpp  (+33 more)
tests/cygwin/: hello-cygwin.c
tests/reloc/: reloc-dll-gcc.s  reloc-dll.c  reloc-use-dll.c
tests/size-of/: size-dll-clang.s  size-dll-linux.s  size-of-dll-clang.s  size-of-dll-gcc.s  size-of-dll-linux.s  size-of-dll.c  size-of-use-dll-clang.s  size-of-use-dll-gcc.s  size-of-use-dll-linux.s  size-of-use-dll.c  size-use-dll-clang.s  size-use-dll-linux.s
tests/valist/: .gitignore  link-dll.bat  link-gcc-exe.bat  reloc-dll-msvc.def  reloc-use-dll-gcc.s  reloc.sh  valist-all-dll-msvc.def  valist-all-dll.c  valist-all-use-dll.c  valist-compile.bat  valist-dll-clang.s  valist-dll-gcc-fixed.s  valist-dll-gcc.s  valist-dll-linux.s  valist-dll-msvc.def  valist-dll.c  valist-dll.cod  valist-gcc.s  valist-link-dll.bat  valist-link-exe.bat  valist-linux.s  valist-sv16-dll.c  valist-use-dll-clang.s  valist-use-dll-gcc-fixed.s  valist-use-dll-gcc.s  valist-use-dll-linux.s  valist-use-dll.c  valist-use-dll.cod  valist.bat  valist.sh
tests/vararg/: vararg-dll-gcc.s  vararg-dll.c  vararg-dll.cod  vararg-use-dll-gcc.s  vararg-use-dll.c  vararg-use-dll.cod  vararg.bat  vararg.sh
tests/varargs/: .gitignore  types.h  varargs-dll-clang.s  varargs-dll-gcc.s  varargs-dll-linux.s  varargs-dll.c  varargs-use-dll-clang.s  varargs-use-dll-gcc.s  varargs-use-dll-linux.s  varargs-use-dll.c
tests/varargs-clang-issue/: valist-clang.s  valist-dll-gcc.s  valist-float-dll.c  valist-float-use-dll.c  valist-sv16-use-dll.c  valist-use-dll-clang.s  valist-use-dll-gcc.s  valist-use-dll-linux.s  varargs-clang-issue-dll-clang.s  varargs-clang-issue-dll-gcc.s  varargs-clang-issue-dll.c  varargs-clang-issue-use-dll-clang.s  varargs-clang-issue-use-dll-gcc.s  varargs-clang-issue-use-dll.c
tests/varargs-msvc-issue/: varargs-msvc-issue-dll-gcc.s  varargs-msvc-issue-dll.c  varargs-msvc-issue-use-dll-gcc.s  varargs-msvc-issue-use-dll.c
tools/: debug-cygwin.sh  find-regression-run.sh  find-regression.sh  find_symbol.py  gcc.natvis  wsl-run.sh
(+148 files in other folders)
